Make thermolith display link use selection input for units